<resources>
    <string name="app_name" translatable="false">WriteYourThink</string>
    <string name="btn_logout">Sign out</string>

    <string name="btnNext" translatable="false">▶</string>
    <string name="btn_previous" translatable="false">◀</string>


    <string name="permission_1">You can grant permissions in [Settings] > [Permissions]</string>
    <string name="permission_2">Access is required to save photos and files.</string>
    <string name="permission_3">Access is required to store location information.</string>

    <string name="facebook_app_id" translatable="false">465200471240774</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb465200471240774</string>


    <string name="msg_subscribed" translatable="false">msg_subscribed</string>
    <string name="msg_subscribe_failed" translatable="false">msg_subscribe_failed</string>
    <string name="hi">hello</string>
    <string name="syncData">Synchronizing data...</string>
    <string name="location1">in a</string>
    <string name="location2">of</string>
    <string name="upload">upload</string>
    <string name="date" translatable="false">date</string>
    <string name="question1">Tell me the location!</string>
    <string name="question2">Let me know what you did!</string>
    <string name="frag3_1">There are no recorded events. Write it down!</string>
    <string name="frag3_2">Recorded ordinary activity</string>

    <string name="diary_item_transition_name" translatable="false">diary_item_%1$s</string>
    <string name="diary_detail_transition_name" translatable="false">diary_detail</string>

    <string name="deleteData">Successfully deleted data.</string>
    <string name="undo">Undo</string>
    <string name="modify">modify</string>
    <string name="delete">delete</string>
    <string name="squeaky">squeaky!</string>
    <string name="geocoderUnavailable">geocoder not available</string>
    <string name="wrongGps">wrong gps coordinates</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="contents" translatable="false">내용</string>
    <string name="titles" translatable="false">제목</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="dateBack" translatable="false"><![CDATA[<-]]></string>
    <string name="dateNext" translatable="false"><![CDATA[->]]></string>
    <string name="list" translatable="false">List</string>
    <string name="calendar" translatable="false">Calendar</string>
    <string name="login_failed">Login failed.</string>
    <string name="logout">You have been logged out.</string>
    <string name="enterYourContent">Please enter your content.</string>
    <string name="cases">cases</string>
    <string name="years"> years ago</string>
    <string name="months"> months ago</string>
    <string name="days"> days ago</string>
    <string name="hour"> hours ago</string>
    <string name="minutes"> minutes ago</string>
    <string name="now"> just before</string>
    <string name="all_notifications">All Notification</string>
</resources>