<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_transparent"
    android:gravity="center"

    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_white_border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:background="@drawable/rounded_rec_clicked2"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            ></ImageView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/alert_white_border"
            android:backgroundTint="@color/my_orange"
            android:visibility="visible">

            <Button
                android:id="@+id/DateDown"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_rec_clicked"
                android:fontFamily="sans-serif"
                android:text="@string/btn_previous"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvDateAndTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvDateAndTime"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:background="@color/my_orange"
                android:gravity="center"
                android:inputType="date"
                android:text="@string/date"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/DateUp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_rec_clicked"
                android:text="@string/btnNext"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDateAndTime"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/question1"
                android:nextFocusDown="@id/edit_contents"
                app:layout_constraintBottom_toTopOf="@+id/edit_contents"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edit_contents"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/question2"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:singleLine="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/my_orange"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_effect"
                    android:src="@drawable/ic_baseline_attach_file_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:id="@+id/invisibleLayout"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:visibility="visible"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="사진 첨부 완료!"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edit_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="사진첨부"
                    android:inputType="textUri"
                    android:visibility="gone" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@color/my_orange"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/upload"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>